compiler/test-data/parser/errors/backend/method_with_body.frel
module test

backend Counter {
    count : i32 = 0

    method get_count() : i32 {
        count
    }
}
